--- a/css/custom.css
+++ b/css/custom.css
@@ -1,14 +1,8 @@
 
-/* .-green-fone: rgb(20, 160, 135);
-.-grey-fone: rgb(240, 240, 240);
-.-white-fone: rgb(255, 255, 255);
-.-black-fone: rgb(20, 20, 20);
-.-back-one: rgb(120, 70, 80);
-.-bakck-two: rgb(55, 90, 90); */
-
 .container {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
+    flex-wrap: nowrap;
     max-width: 100%;
     justify-content: center;
     position: relative;
@@ -26,13 +20,15 @@
 
 .main {
     display: flex;
-    max-width: 100%;
+    width: 100%;
     justify-content: center;
+    align-content: center;
+    margin-bottom: auto;
 }
 
 .title {
     display: flex;
-    width: 100%;
+    min-width: 100%;
     height: 100vh;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -41,7 +37,8 @@
 
 .-title-fone {
     display: flex;
-    width: 100%;
+    min-width: 100%;
+    height: 100vh;
     background-image: url(/img/fone-1.jpg);
     background-color: rgb(120, 70, 80);
     background-clip: border-box;
@@ -71,15 +68,6 @@
     color: rgb(255, 255, 255);
 }
 
-.pushhh {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    width: 100%;
-    margin-top: auto;
-}
-
 .get-btn {
     display: flex;
     padding: 4rem .5rem 4rem .5rem;
@@ -87,5 +75,14 @@
 
 .social {
     display: flex;
-    padding: 4rem .5rem 1rem .5rem;
+    width: 100%;
+    justify-content: center;
+    height: min-content;
+    padding: 4rem .5rem 2rem .5rem;
+    margin-top: auto;
+}
+
+.sc-logo {
+    display: flex;
+    padding: 0 .5rem 0 .5rem;
 }
