--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,9 @@
 
 .container {
-    /* display: flex; */
+    display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    max-width: 100%;
+    min-width: 100%;
     justify-content: center;
     position: relative;
 }
@@ -37,7 +37,7 @@
 
 .-title-fone {
     display: flex;
-    min-width: 100%;
+    width: 100%;
     height: 100vh;
     background-image: url(/img/fone-1.jpg);
     background-color: rgb(120, 70, 80);
@@ -58,19 +58,19 @@
 
 .-h1-case {
     display: flex;
-    padding: .5rem .5rem .5rem .5rem;
+    padding: .5rem 0 .5rem 0;
     color: rgb(255, 255, 255);
 }
 
 .-h2-case {
     display: flex;
-    padding: .5rem .5rem .5rem .5rem;
+    padding: .5rem 0 .5rem 0;
     color: rgb(255, 255, 255);
 }
 
 .get-btn {
     display: flex;
-    padding: 4rem .5rem 4rem .5rem;
+    padding: 4rem 0 4rem 0;
 }
 
 .social {
@@ -78,7 +78,7 @@
     width: 100%;
     justify-content: center;
     height: min-content;
-    padding: 4rem .5rem 2rem .5rem;
+    padding: 4rem 0 2rem 0;
     margin-top: auto;
 }
 
