--- a/css/controls.css
+++ b/css/controls.css
@@ -1,68 +1,29 @@
 
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    box-sizing: border-box;
-}
-
-.root {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    width: 100vw;
-    min-height: 100vh;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: hsl(230, 15%, 15%);
-}
-
-p {
-    margin: 0;
-    padding: 0;
-    line-height: 1;
-}
-
-body {
-    font-family: 'Blinker', sans-serif;
-    font-size: 14px;
-}
-
-hr {
-    width: 95%;
-    margin-top: .5rem;
-    margin-bottom: .5rem;
-    border-style: inset;
-    border-width: .12rem;
-    border-color: hsla(230, 15%, 40%, .9);
-}
-
 /* --- Custom Button ----------------------------------- */
 .-button {
     width: 42px;
     height: 42px;
     border-style: solid;
-    border-color: hsla(230, 15%, 40%, .9);
-    background-color: hsla(230, 15%, 40%, .2);
+    border-color: var(--border);
+    background-color: var(--base);
     font-size: 1.4rem;
-    color: hsla(230, 100%, 100%, .8);
+    color: var(--text-light);
 }
 
 .-button:hover {
-    color: hsl(35, 100%, 50%);
+    color: var(--activ-ext);
 }
 
 .-button:active {
-    background-color: hsla(230, 15%, 40%, 1);
+    background-color: var(--activ-base);
 }
 
 .material-icons-outlined.iconGrey {
-    color: hsla(230, 100%, 100%, .4);
+    color: white;
 }
 
 .material-icons-outlined.iconGrey:hover {
-    color: hsl(35, 100%, 50%);
+    color: var(--activ-ext);
 }
 
 /* --- Custom checkbox ---------------------------------- */
@@ -96,31 +57,17 @@ hr {
     align-items: center;
     position: relative;
     border-radius: 15px;
-    border: .2rem solid hsla(230, 15%, 40%, .9);
+    border: .2rem solid var(--base-light);
     transition: all 0.15s cubic-bezier(0, 1.05, 0.72, 1.07);
 }
 
 .chkbox input:hover ~ .check {
-    border-color: hsla(230, 100%, 100%, .5);
+    border-color: var(--hover-base);
 }
 
 .chkbox input:checked ~ .check {
-    border-color: hsl(35, 100%, 50%);
+    border-color: var(--activ-ext);
 }
 
 
-.grayscale {
-    background: linear-gradient(90deg, #424242 50%, #a8a8a8 50%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;}
-.red { color: red; }
-.orange { color: orange; }
-.yellow { color: yellow; }
-.green { color: green; }
-.blue { color: blue; }
-.lilac { color:mediumorchid ; }
-.pink  { color: pink; }
-.white { color: white; }
-.gray { color: gray; }
-.black { color: black; }
-.brown { color: brown; }
+
